--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ button:hover{opacity:.9}
 <script>
 /* ======== CONFIGURE YOUR JSONBIN.IO DETAILS HERE ======== */
 const BIN_ID  = "687bd846480911522001db09";  // 🔴 replace with your Bin ID
-const API_KEY = "$2a$10$xcf960ZHIYlWyWFGWqu15Osv.zaYf23iItcX7EODdz/PnCHcrLB02"; // 🔴 replace with your X-Master-Key
+const API_KEY = "$2a$10$BB0v8qWkEKADSXDUG7azp.6KMczQbobXJNaM.Xx1qPOCNz7S7smpe"; // 🔴 replace with your X-Master-Key
 /* ======================================================== */
 const BASE_URL   = `https://api.jsonbin.io/v3/b/${BIN_ID}`;
 const READ_URL   = `${BASE_URL}/latest`;
