--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ button:hover{opacity:.9}
   <button id="loginBtn">Login</button>
   <p id="loginErr" style="color:red"></p>
   <div class="quick-login">
-    <button class="quick-parent"   onclick="quickLogin('parent','admin')">Parent</button>
+<!--     <button class="quick-parent"   onclick="quickLogin('parent','admin')">Parent</button> -->
     <button class="quick-abdullah" onclick="quickLogin('abdullah','1234')">Abdullah</button>
     <button class="quick-musab"    onclick="quickLogin('musab','1234')">Musab</button>
   </div>
